Remove 84 code smells